--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <section id="board">
+
+    </section>
+    <ul id="grille">
+    </ul>
 <script src=./js/script.js charset=utf-8></script>
 </body>
 </html>
-
