--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <section id="board">
-
-    </section>
-    <ul id="grille">
-    </ul>
+    <table id="grid">
+    </table>
 <script src=./js/script.js charset=utf-8></script>
 </body>
 </html>
