--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <table id="grid">
     </table>
+    <div id="victory"></div>
     <button type="button" name="button" onclick="raz()">End game</button>
 <script src=./js/script.js charset=utf-8></script>
 </body>
