retranstription of js into jquery

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset=UTF-8>
     <meta name=viewport content=width=device-width, initial-scale=1.0>
     <meta http-equiv=X-UA-Compatible content=ie=edge>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <link rel=stylesheet href=./css/master.css>
     <title>Document</title>
 </head>
@@ -11,7 +12,7 @@
     <table id="grid">
     </table>
     <div id="victory"></div>
-    <button type="button" name="button" onclick="raz()">End game</button>
+    <button type="button" name="button" id="raz">End game</button>
 <script src=./js/script.js charset=utf-8></script>
 </body>
 </html>
